k8s/penpot/03_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: penpot-frontend
  namespace: penpot
spec:
  selector:
    app: penpot-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: penpot-backend
  namespace: penpot
spec:
  selector:
    app: penpot-backend
  ports:
    - protocol: TCP
      port: 6060
      targetPort: 6060
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: penpot-exporter
  namespace: penpot
spec:
  selector:
    app: penpot-exporter
  ports:
    - protocol: TCP
      port: 6061
      targetPort: 6061
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: penpot-mailcatch
  namespace: penpot
spec:
  selector:
    app: penpot-mailcatch
  ports:
    - protocol: TCP
      port: 1080
      targetPort: 1080
  type: ClusterIP
