k8s/penpot/05_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: penpot-frontend-ingress
  namespace: penpot
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`penpot.keindev.ru`)
      priority: 10
      services:
        - kind: Service
          name: penpot-frontend
          namespace: penpot
          port: 80
    - kind: Rule
      match: "Host(`penpot.keindev.ru`) && PathPrefix(`/assets`)"
      priority: 21
      services:
        - kind: Service
          name: penpot-backend
          namespace: penpot
          port: 6060
  tls:
    secretName: local-keindev-ru-tls
